--- a/attributes.html
+++ b/attributes.html
@@ -1,2 +1,10 @@
 <!DOCTYPE HTML>
+<html lang="en"><p> The lang attribute is used to declare the language of a webpage</p>
+<title>HTML Attributes</title>
+<p>The href attribute:Used to specify the URL of the page the link goes to</p>
+<a href="https://moringa.instructure.com/">Moringa School LMS</a>
+<p>src attribute: Specifies the path of an itemto be displayed</p>
+<img src="Forking and Cloning .png">
+<p>The style attribute: Used to ass CSS styles to elements</p>
+<p style="font size:10pt;">The font size is set to 10pt</p>
 </html>
