--- a/attributes.html
+++ b/attributes.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en"><p> The lang attribute is used to declare the language of a webpage</p>
-<title>HTML Attributes</title>
+<title>Title attribute: Defines some extra information about an element</title>
 <p>The href attribute:Used to specify the URL of the page the link goes to</p>
 <a href="https://moringa.instructure.com/">Moringa School LMS</a>
 <p>src attribute: Specifies the path of an itemto be displayed</p>
